--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,7 @@ default_floating_border normal 0
 hide_edge_borders both
 gaps inner	4
 gaps outer	-4
-font pango:Ctrld 10
+font pango:Dina 10
 title_align center
 
 client.focused		#0c0c0c #0c0c0c #f5f5f5 #0c0c0c
@@ -40,9 +40,9 @@ workspace $ws6 output	DP-1
 
 floating_modifier $mod
 
-bindsym $mod+t		exec $terminal
-bindsym $mod+b		exec $browser
-bindsym $mod+c		exec $torrent
+bindsym $mod+t	exec $terminal
+bindsym $mod+b	exec $browser
+bindsym $mod+c	exec $torrent
 
 bindsym $mod+q	kill
 bindsym $mod+h	focus left
